app/src/pages/transactions/transactions.scss
page-transactions {
  background-color: #eee;

  ion-avatar[item-start] {
    margin-right: 8px !important;
  }

  ion-content {
    background-color: transparent !important;
  }

  ion-icon.transaction {
    color: #ccc;
    font-size: 1.6em;
    line-height: 40px;
    text-align: center;

    &.bonus,
    &.buy,
    &.dividend {
      color: color($colors, secondary, base);
    }

    &.sell {
      color: color($colors, danger, base);
    }
  }

  ion-list {
    &:last-child {
      margin-bottom: 0 !important;
    }

    ion-list-header {
      ion-label {
        margin-bottom: 0 !important;
      }
    }

    ion-item {
      .item-inner {
        margin-left: 4px !important;
      }
    }
  }

  .total {
    float: right;
  }

  .type {
    float: right;
    font-weight: 100;
  }
}

